14 Apr 2006 RECFM bits in dasdblks.h (correction by Christophe Nillon) - Roger Bowler
12 Apr 2006 SYNCHRONIZE_CPUS macro in place of synchronize_broadcast - Greg
10 Apr 2006 Portability: change bitfield types from BYTE to u_int - Fish
09 Apr 2006 Transparently handle BSD sockaddr_in sin_len - Fish
09 Apr 2006 Un-"fix" panel.c refresh (sigh) - Fish
09 Apr 2006 Fix bug causing bogus routing table setup for CTCI - Bjoern Zeeb
09 Apr 2006 Added likely/unlikely statements dyncrypt.c - Bernard vd Helm
08 Apr 2006 Added likely/unlikely statements cmpsc.c - Bernard van der Helm
07 Apr 2006 New 'PANTITLE' config stmt to set console/panel title - Fish
06 Apr 2006 PR# 34/tape: prevent tape mount unless no tape mounted - Fish
06 Apr 2006 Missed a scsimount detach/devinit bug - Fish
06 Apr 2006 PR# 53/tape: Bus-Tech compressed AWS file support - Fish
06 Apr 2006 PR# 70/tape: AWS tapes 2GB filesize limitation - Fish
05 Apr 2006 PR# 18/tape: Herc very slow initializing if no tape in SCSI
            tape drive, PR# 48/tape: Tape mount/unmount messages still
            not handled correctly, fix bsr/fsr in light of 01 Apr 2006
            w32stape fixes for utilities, tweak to auto-scsi-mount logic
            to eliminate(?) WIN32 drive query inefficiencies - Fish
05 Apr 2006 fix(?) panel.c to always refresh the New Panel display,
            fix minor New Panel device status painting glitch - Fish
01 Apr 2006 tapecopy: accept WIN32 "\\.\Tape0" filename, use blockid
            segment# for ext GUI progress msgs, rewind at exit - Fish
01 Apr 2006 Addt'l Win32 SCSI status fixes for utils; s/b ok now - Fish
27 Mar 2006 SCSI tape fixes (MAJOR COMMIT):  (Fish)
             1) serialize open/close processing
             2) support "YES" as valid AUTO_SCSI_MOUNT specification
                (uses default interval value, currently 5 seconds)
             3) "scsimount" panel command:
                 a) support '0' and 'yes'
                 b) don't issue "no active mount requests"